chore: minor fixes dark mode on button catalogue and switch dark mode

--- a/src/styles/components/_toggleButton.scss
+++ b/src/styles/components/_toggleButton.scss
@@ -1,4 +1,5 @@
 .toggle {
+  cursor: pointer;
   width: 35px;
   height: 35px;
   border: solid $iconsOrange;
@@ -22,5 +23,21 @@
     &.notVisible {
       display: none;
     }
+  }
+  &:hover {
+    transition: 0.2s;
+    transform: scale(1.1);
+  }
+}
+
+@keyframes toggle {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
   }
 }
