--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -16,3 +16,10 @@
 .preparationDark {
   background-color: #404244;
 }
+
+.buttonDark {
+  color: #f1f1f1;
+  &:hover {
+    color: black;
+  }
+}
